--- a/VibeCheck/VibeCheck.csproj
+++ b/VibeCheck/VibeCheck.csproj
@@ -7,18 +7,27 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.2"/>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.2" PrivateAssets="all"/>
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.2" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.2" PrivateAssets="all" />
     </ItemGroup>
 
     <ItemGroup>
       <None Update="Components\FeelingsWheel.razor.css">
         <DependentUpon>FeelingsWheel.razor.razor</DependentUpon>
       </None>
+      <None Include="Properties\appSettings.json">
+        <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+        <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
       <Content Update="Components\FeelingsWheel.razor.css" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\VibeCheck.Model\VibeCheck.Model.csproj" />
     </ItemGroup>
 
 </Project>
