--- a/VibeCheckServer/VibeCheckServer.csproj
+++ b/VibeCheckServer/VibeCheckServer.csproj
@@ -17,7 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\VibeCheck.Model\VibeCheck.Model.csproj" />
+      <ProjectReference Include="..\VibeCheckModel\VibeCheckModel.csproj" />
     </ItemGroup>
 
 </Project>
