got docker to build and deploy

--- a/VibeCheckServer/VibeCheckServer.csproj
+++ b/VibeCheckServer/VibeCheckServer.csproj
@@ -18,6 +18,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\VibeCheckModel\VibeCheckModel.csproj" />
+      <ProjectReference Include="..\VibeCheck\VibeCheck.csproj" />
     </ItemGroup>
 
     <ItemGroup>
