--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,13 @@
 version: '3.4'
 
 services:
-  vibecheckserver:
-    image: vibecheckserver
-    build:
-      context: .
-      dockerfile: Dockerfile.server
-    ports:
-      - "5000:80"
-    volumes:
-      - .:/app
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-
   vibecheck:
     image: vibecheck
     build:
       context: .
-      dockerfile: Dockerfile.web
+      dockerfile: Dockerfile
     ports:
-      - "5001:80"
-    volumes:
-      - .:/app
+      - "5000:80"
+      - "5001:443"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
