--- a/VibeCheckServer/VibeCheckServer.csproj
+++ b/VibeCheckServer/VibeCheckServer.csproj
@@ -5,6 +5,7 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace>VibeCheckServer</RootNamespace>
+        <CompressionEnabled>false</CompressionEnabled>
     </PropertyGroup>
 
     <ItemGroup>
